# NORM-Nav

./: .editorconfig  .flake8  .gitignore  .gitmodules  README.md  index.html  pyproject.toml
.cursor/rules/: 01-project-overview.mdc  02-project-rules.mdc
scripts/: check_standards.sh
src/human_robot_interaction/navibot_instruction_parsing/: README.md  package.xml  setup.cfg  setup.py
src/human_robot_interaction/navibot_instruction_parsing/config/: instruction_parsing_params.yaml
src/human_robot_interaction/navibot_instruction_parsing/launch/: instruction_parsing.launch.py
src/human_robot_interaction/navibot_instruction_parsing/navibot_instruction_parsing/: instruction_parser.py  instruction_parsing_node.py  instruction_publisher_node.py  llm_interface.py  structured_output.py
src/localization/navibot_lio_interface/: CMakeLists.txt  package.xml
src/localization/navibot_lio_interface/launch/: lio_interface.launch
src/localization/navibot_lio_interface/src/: lioInterface.cpp
src/navibot_bringup/: CMakeLists.txt  package.xml
src/navibot_bringup/config/reality/: fastlio_mid360_real.yaml  modeling_params_real.yaml  nav2_params_real.yaml  tracker_params_real.yaml
src/navibot_bringup/config/reality/costmap/: constraint_compensation_params_real.yaml  costmap_fusion_params_real.yaml  geometric_traversability_costmap_params_real.yaml  velocity_constraint_params_real.yaml
src/navibot_bringup/config/simulation/: fastlio_mid360_sim.yaml  modeling_params_sim.yaml  nav2_params_sim.yaml  tracker_params_sim.yaml
src/navibot_bringup/config/simulation/costmap/: constraint_compensation_params_sim.yaml  directional_constraint_costmap_params_sim.yaml  geometric_traversability_costmap_params_sim.yaml  velocity_constraint_params_sim.yaml
src/navibot_bringup/costmap/simulation/: EMPTY.yaml
src/navibot_bringup/launch/: bringup_real.launch.py  bringup_sim.launch.py  norm_nav_bringup_real.launch.py  norm_nav_bringup_sim.launch.py
src/navibot_bringup/rviz/: fastlio.rviz
src/navibot_bringup/urdf/: NaviBot_real.xacro  NaviBot_sim.xacro
src/navigation/navibot_navigation/: CMakeLists.txt  package.xml
src/navigation/navibot_navigation/launch/: bringup_classic_navigation.py  navigation_launch.py  rviz_launch.py
src/navigation/navibot_navigation/rviz/: nav2_real.rviz  nav2_sim.rviz
src/perception/navibot_costmap/: README.md  package.xml  setup.cfg  setup.py
src/perception/navibot_costmap/config/: constraint_compensation_params.yaml  directional_constraint_costmap_params.yaml  semantic_traversability_costmap_params.yaml  velocity_constraint_params.yaml
src/perception/navibot_costmap/examples/: velocity_constraint_usage.md
src/perception/navibot_costmap/launch/: constraint_compensation_bringup.launch.py  directional_constraint_costmap_bringup.launch.py  geometric_traversability_costmap_bringup.launch.py  global_costmap_bringup.launch.py  semantic_traversability_costmap_bringup.launch.py  velocity_constraint_bringup.launch.py
src/perception/navibot_costmap/navibot_costmap/: constraint_compensation_node.py  costmap_fusion_node.py  directional_constraint_costmap_node.py  geometric_traversability_costmap_node.py  semantic_traversability_costmap_node.py  velocity_constraint_node.py
src/perception/navibot_grounded_sam2/: README.md  package.xml  setup.cfg  setup.py
src/perception/navibot_grounded_sam2/launch/: grounded_sam2_tracker_bringup.launch.py
src/perception/navibot_grounded_sam2/navibot_grounded_sam2/: grounded_sam2_tracker.py
src/perception/navibot_grounded_sam2/navibot_grounded_sam2/utils/: __init__.py  common_utils.py  mask_dictionary_model.py  supervision_utils.py  track_utils.py  video_utils.py
src/perception/navibot_object_modeling/: package.xml  setup.cfg  setup.py
src/perception/navibot_object_modeling/launch/: object_modeling_bringup.launch.py
src/perception/navibot_object_modeling/navibot_object_modeling/: object_modeling_node.py  pipeline.py  ros_io.py
src/perception/navibot_object_modeling/navibot_object_modeling/core/: __init__.py  data_structures.py  geometry.py  tracker.py
src/perception/navibot_object_modeling/navibot_object_modeling/utils/: __init__.py  pointcloud_processing.py  projection.py  visualization.py
src/perception/navibot_pointcloud_to_laserscan/: CMakeLists.txt  README.md  package.xml
src/perception/navibot_pointcloud_to_laserscan/include/navibot_pointcloud_to_laserscan/: pointcloud_to_laserscan_node.hpp
src/perception/navibot_pointcloud_to_laserscan/launch/: pointcloud_to_laserscan_launch.py
src/perception/navibot_pointcloud_to_laserscan/src/: pointcloud_to_laserscan_node.cpp
src/sensors/livox_ros_driver2/: README.md
src/sensors/livox_ros_driver2/config/: MID360_config.json
src/sensors/livox_ros_driver2/launch_ROS2/: msg_MID360_launch.py
src/sensors/livox_ros_driver2/src/: lddc.cpp  lddc.h
src/simulation/livox_laser_simulation_RO2/src/: livox_points_plugin.cpp
src/simulation/livox_laser_simulation_RO2/urdf/: mid360.xacro
src/simulation/navibot_simulation/: CMakeLists.txt  package.xml
src/simulation/navibot_simulation/launch/: gazebo_simulation.launch.py
src/simulation/navibot_simulation/urdf/: simulation_waking_robot.xacro
src/utilities/navibot_interfaces/: CMakeLists.txt  README.md  package.xml
src/utilities/navibot_interfaces/msg/: BehavioralConstraint.msg  BehavioralConstraintArray.msg  BehavioralInstruction.msg  GroundedSam.msg  OBBInfo2D.msg  OBBInfo2DArray.msg
src/utilities/navibot_interfaces/srv/: ParseInstructions.srv
src/utilities/waypoint_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
src/utilities/waypoint_rviz_plugin/include/: waypoint_tool.hpp
src/utilities/waypoint_rviz_plugin/src/: waypoint_tool.cpp
static/css/: index.css
static/js/: index.js
