<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navibot_instruction_parsing</name>
  <version>1.0.0</version>
  <description>Behavioral instruction parsing module for natural language navigation commands</description>
  <maintainer email="wjh_9696@163.com">Wang Junhui</maintainer>
  <author>Wang Junhui</author>
  <license>MIT</license>

  <depend>navibot_interfaces</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
