<package format="3">
  <name>navibot_lio_interface</name>
  <version>1.0.0</version>
  <description>Interface for transforming LIO odometry to standard ROS navigation frames</description>
  <maintainer email="wjh_9696@163.com">Wang Junhui</maintainer>
  <license>MIT</license>
  <author email="ndamis@cmu.edu">Ninaad Damis</author>
  <author email="wjh_9696@163.com">Wang Junhui</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
