<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navibot_navigation</name>
  <version>1.0.0</version>
  <description>Nav2-based navigation launch files and configurations for NaviBot</description>
  <maintainer email="wjh_9696@163.com">Wang Junhui</maintainer>
  <license>MIT</license>
  <author email="wjh_9696@163.com">Wang Junhui</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>spatio_temporal_voxel_layer</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
