<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navibot_pointcloud_to_laserscan</name>
  <version>1.0.0</version>
  <description>Convert 3D point cloud to 2D laser scan for NaviBot navigation system. Adapted from ros-perception/pointcloud_to_laserscan.</description>
  <maintainer email="wjh_9696@163.com">Wang Junhui</maintainer>
  <license>MIT</license>
  <author email="wjh_9696@163.com">Wang Junhui</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>message_filters</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_pep257</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
