<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navibot_simulation</name>
  <version>1.0.0</version>
  <description>Gazebo simulation environment for NaviBot navigation testing</description>
  <maintainer email="wjh_9696@163.com">Wang Junhui</maintainer>
  <license>MIT</license>
  <author email="lihanchen2004@163.com">Lihan Chen</author>
  <author email="wjh_9696@163.com">Wang Junhui</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gazebo_ros_pkgs</depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <gazebo_ros gazebo_model_path="${prefix}/meshes"/>
    <gazebo_ros gazebo_plugin_path="${prefix}/plugins"/> -->
    <gazebo_ros
      gazebo_model_path="${prefix}/meshes"
      gazebo_plugin_path="${prefix}/plugins"
    />
  </export>
</package>
