<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navibot_interfaces</name>
  <version>1.0.0</version>
  <description>
    Custom ROS2 interfaces for NaviBot navigation system.
    Includes message types, service definitions, and action interfaces
    for robot navigation, perception, and task management.
  </description>

  <maintainer email="wjh_9696@163.com">Wang Junhui</maintainer>
  <license>MIT</license>
  <author email="wjh_9696@163.com">Wang Junhui</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>action_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
