<package format="3">
  <name>waypoint_rviz_plugin</name>
  <version>1.0.0</version>
  <description>Enhanced Goal/Waypoint RViz2 Plugin with Highlighted Visualization</description>
  <maintainer email="wjh_9696@163.com">Wang Junhui</maintainer>
  <author email="wjh_9696@163.com">Wang Junhui</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rviz2</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>rviz_default_plugins</depend>
  <depend>qtbase5-dev</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>
  <depend>pluginlib</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
